fix(ci): resolve multi-platform CI failures
- C#: Change ConfigOptions JSON serialization to include null values
  (fixes missing headingStyle field error when calling Rust FFI)
- Go: Include FFI header and pkg-config files in artifact uploads
  (ensures test job has all required files on Windows)
- PHP: Use DIRECTORY_SEPARATOR for cross-platform path construction
  (fixes Windows path separator mismatch in test files)
- Cargo: Remove hardcoded version constraints from path dependencies
  (fixes version mismatch between workspace members)

--- a/.github/workflows/ci-go.yaml
+++ b/.github/workflows/ci-go.yaml
@@ -307,6 +307,8 @@ jobs:
           path: |
             target/release/libkreuzberg_ffi.*
             target/x86_64-pc-windows-gnu/release/libkreuzberg_ffi.*
+            crates/kreuzberg-ffi/kreuzberg.h
+            crates/kreuzberg-ffi/kreuzberg-ffi.pc
           retention-days: 7
 
       - name: Cleanup Rust cache
