--- a/crates/kreuzberg-cli/Cargo.toml
+++ b/crates/kreuzberg-cli/Cargo.toml
@@ -13,7 +13,7 @@ keywords = ["document", "extraction", "cli", "tool", "parser"]
 categories = ["command-line-utilities", "text-processing"]
 
 [dependencies]
-kreuzberg = { version = "4.0.0", path = "../kreuzberg", features = ["cli", "bundled-pdfium"] }
+kreuzberg = { path = "../kreuzberg", features = ["cli", "bundled-pdfium"] }
 clap = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
