ci: run CI workflows after Publish completes
Add workflow_run trigger to all CI workflows so they run after
the Publish Release workflow completes. This ensures publish
gets runner resources first when both are triggered.

--- a/.github/workflows/ci-docker.yaml
+++ b/.github/workflows/ci-docker.yaml
@@ -1,6 +1,9 @@
 name: CI Docker Build & Test
 
 on:
+  workflow_run:
+    workflows: ["Publish Release"]
+    types: [completed]
   push:
     branches: [main]
     paths:
