--- a/.github/workflows/ci-elixir.yaml
+++ b/.github/workflows/ci-elixir.yaml
@@ -1,6 +1,9 @@
 name: CI Elixir
 
 'on':
+  workflow_run:
+    workflows: ["Publish Release"]
+    types: [completed]
   push:
     branches: [main]
     paths:
