--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2360,6 +2360,13 @@ jobs:
         working-directory: packages/elixir
         run: mix deps.get
 
+      - name: Compile project to generate metadata
+        working-directory: packages/elixir
+        # This may fail because checksum file is empty, but metadata is written before the error.
+        # The download step will then populate the checksum file.
+        continue-on-error: true
+        run: mix compile --force
+
       - name: Generate checksums for precompiled NIFs
         working-directory: packages/elixir
         run: mix rustler_precompiled.download Kreuzberg.Native --all --print
