fix: remove kreuzberg-tesseract version constraint and add PHP test assertions

--- a/crates/kreuzberg/Cargo.toml
+++ b/crates/kreuzberg/Cargo.toml
@@ -173,7 +173,7 @@ rst_parser = { version = "0.4", optional = true }
 fb2 = { version = "0.4", optional = true }
 typst-syntax = { version = "0.14", optional = true }
 
-kreuzberg-tesseract = { path = "../kreuzberg-tesseract", version = "4.0", optional = true }
+kreuzberg-tesseract = { path = "../kreuzberg-tesseract", optional = true }
 image = { workspace = true, default-features = false, features = [
     "png",
     "jpeg",
