fix(ci): resolve C# serialization and Ruby cache issues
C# Serialization Fix:
- Changed HtmlConversionOptions to serialize as empty object {} instead of null
- Rust FFI expects html_options to be an object, not null value
- Resolves 145 test failures with "html_options must be an object" error

Ruby Cache Cleanup Fix:
- Added cleanup of packages/ruby/tmp/ directory to prevent stale Cargo fingerprints
- Applied to both build-ruby-gem and test-ruby jobs
- Prevents rb_sys compilation failures due to fingerprint mismatches

Updates CHANGELOG.md with both fixes in [Unreleased] section.

--- a/.github/workflows/ci-ruby.yaml
+++ b/.github/workflows/ci-ruby.yaml
@@ -129,6 +129,11 @@ jobs:
             echo "Cleaning stale build artifacts to prevent fingerprint errors"
             cargo clean --release -p kreuzberg-ffi 2>/dev/null || true
             cargo clean --release -p kreuzberg 2>/dev/null || true
+            # Clean rb_sys build directory to prevent stale fingerprints in packages/ruby/tmp
+            if [ -d "packages/ruby/tmp" ]; then
+              echo "Cleaning rb_sys build directory: packages/ruby/tmp"
+              rm -rf packages/ruby/tmp
+            fi
           else
             echo "No target directory found, skipping cache cleanup"
           fi
@@ -525,6 +530,11 @@ jobs:
             echo "Cleaning stale build artifacts to prevent fingerprint errors"
             cargo clean --release -p kreuzberg-ffi 2>/dev/null || true
             cargo clean --release -p kreuzberg 2>/dev/null || true
+            # Clean rb_sys build directory to prevent stale fingerprints in packages/ruby/tmp
+            if [ -d "packages/ruby/tmp" ]; then
+              echo "Cleaning rb_sys build directory: packages/ruby/tmp"
+              rm -rf packages/ruby/tmp
+            fi
           else
             echo "No target directory found, skipping cache cleanup"
           fi
