--- a/e2e/wasm-workers/package.json
+++ b/e2e/wasm-workers/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.12.1",
     "@cloudflare/workers-types": "^4.20260107.1",
+    "@kreuzberg/test-utils": "workspace:*",
     "@kreuzberg/wasm": "workspace:*",
     "@vitest/runner": "~3.2.0",
     "@vitest/snapshot": "~3.2.0",
