--- a/e2e/wasm-workers/tsconfig.json
+++ b/e2e/wasm-workers/tsconfig.json
@@ -7,7 +7,8 @@
 		"types": ["@cloudflare/workers-types", "vitest/globals"],
 		"strict": true,
 		"esModuleInterop": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"customConditions": ["types"]
 	},
 	"include": ["tests/**/*.ts"]
 }
