perf: run all tests in parallel by default
Change task test:all to use deps instead of cmds, which runs all
language test suites in parallel instead of sequentially.

This reduces total test time from ~1.5 hours to ~20-30 minutes.

--- a/.task/workflows/test.yml
+++ b/.task/workflows/test.yml
@@ -2,8 +2,8 @@ version: "3"
 
 tasks:
   all:
-    desc: Run all tests across all languages
-    cmds:
+    desc: Run all tests across all languages (in parallel)
+    deps:
       - task: rust:test
       - task: python:test
       - task: node:test
@@ -17,7 +17,7 @@ tasks:
 
   all:parallel:
     desc: Run all tests in parallel (using deps)
-    cmds:
+    deps:
       - task: rust:test
       - task: python:test
       - task: node:test
