--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires = ["maturin>=1,<2"]
 [dependency-groups]
 dev = [
     "covdefaults>=2.3.0",
+    "httpx>=0.27.0",
     "maturin>=1.10.2",
     "mypy>=1.19.0",
     "prek>=0.2.21",
