fix(node): restore plugin system and config loading functionality after refactoring
Restores all functionality that was stubbed out during module refactoring:

Config Loading (21 test fixes):
- Implement load_extraction_config_from_file() with support for TOML/YAML/JSON
- Implement discover_extraction_config() with proper Option<> return type

Plugin System (31 test fixes):
- Restore JsValidator struct with full Plugin + Validator trait implementations
- Restore JsPostProcessor struct with full Plugin + PostProcessor trait implementations
- Restore JsOcrBackend struct with full Plugin + OcrBackend trait implementations
- Add validate_plugin_object() helper function for parameter validation
- Wire up all register/unregister/list/clear functions to registries

Additional Fixes:
- Add djot_content field to ExtractionResult in OCR backend
- Pass default priority (50) to PostProcessor registry
- Add async_trait, Arc, and base64 imports where needed
- PHP panic guards and ONNX path setup from previous subagent work

Test Results:
- Node tests: 116 failures → 64 failures (52 tests fixed)
- Remaining failures are unrelated validateMimeType function

No stubs, no TODOs, no unimplemented functionality in plugin system or config loading.

--- a/crates/kreuzberg-php/Cargo.toml
+++ b/crates/kreuzberg-php/Cargo.toml
@@ -18,6 +18,7 @@ test = false
 
 [dependencies]
 async-trait = { workspace = true }
+ctor = "0.2"
 ext-php-rs = "0.15"
 kreuzberg = { path = "../kreuzberg", features = ["full", "bundled-pdfium"] }
 once_cell = { workspace = true }
