fix(ci): resolve CI failures from refactoring changes
- Remove unused imports in Ruby FFI bindings to fix macOS build
- Fix TypeScript module exports in test-utils package (use .js/.cjs instead of .mjs)
- Add TODO comments for Windows cache issues in PHP/Go workflows
- Disable verbose linker flags on Windows Go builds (incompatible with CGO)
- Add #[allow(dead_code)] to unused helper functions in Ruby config

--- a/.github/workflows/ci-php.yaml
+++ b/.github/workflows/ci-php.yaml
@@ -227,6 +227,8 @@ jobs:
         uses: ./.github/actions/setup-rust
         with:
           cache-key-prefix: php-test-${{ matrix.os }}
+          # TODO: Consider disabling cache on Windows due to fingerprint corruption
+          # See: https://github.com/kreuzberg-dev/kreuzberg/pull/316
 
       - name: Detect partial cache hit and clean stale fingerprints
         shell: bash
