--- a/packages/ruby/spec/fixtures/config.toml
+++ b/packages/ruby/spec/fixtures/config.toml
@@ -21,7 +21,7 @@ extract_images = true
 passwords = ["secret", "backup"]
 extract_metadata = true
 
-[images]
+[image_extraction]
 extract_images = true
 target_dpi = 600
 max_image_dimension = 2000
