fix(ci): add Windows tessdata setup for Elixir CI
Add Tesseract tessdata download step for Windows in Elixir CI workflow.
Downloads eng.traineddata and osd.traineddata to C:/tess/tessdata and
sets TESSDATA_PREFIX environment variable.

This fixes Tesseract-related test failures on Windows where tessdata
files were not available.

--- a/.github/workflows/ci-elixir.yaml
+++ b/.github/workflows/ci-elixir.yaml
@@ -82,6 +82,17 @@ jobs:
       - name: Install system dependencies
         uses: ./.github/actions/install-system-deps
 
+      - name: Setup Tesseract tessdata (Windows)
+        if: runner.os == 'Windows'
+        shell: bash
+        run: |
+          mkdir -p /c/tess/tessdata
+          curl -fsSL -o /c/tess/tessdata/eng.traineddata \
+            "https://github.com/tesseract-ocr/tessdata_fast/raw/main/eng.traineddata"
+          curl -fsSL -o /c/tess/tessdata/osd.traineddata \
+            "https://github.com/tesseract-ocr/tessdata_fast/raw/main/osd.traineddata"
+          echo "TESSDATA_PREFIX=/c/tess/tessdata" >> "$GITHUB_ENV"
+
       - name: Free disk space before setup
         if: startsWith(matrix.os, 'ubuntu')
         uses: ./.github/actions/free-disk-space-linux
