--- a/e2e/typescript/package.json
+++ b/e2e/typescript/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "@kreuzberg/e2e-typescript",
-  "version": "4.1.2",
-  "private": true,
+  "name": "@kreuzberg/e2e-tests",
+  "version": "4.2.0",
   "type": "module",
+  "description": "End-to-end tests for Kreuzberg TypeScript bindings config parity",
   "scripts": {
-    "test": "vitest run"
-  },
-  "devDependencies": {
-    "@types/node": "^25.0.3"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@kreuzberg/node": "workspace:*",
-    "@kreuzberg/test-utils": "workspace:*"
+    "@kreuzberg/node": "^4.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.5",
+    "@vitest/ui": "^1.0.4",
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.4"
   }
 }
