test(ci): add PyPI wheel compatibility tests for ARM64
Add a new test-pypi-wheel job to ci-docker.yaml that verifies kreuzberg
wheels can be installed from PyPI on various Linux distributions:

- Tests both x86_64 and ARM64 (aarch64) platforms
- Uses Python 3.10, 3.12, and 3.13 on Debian Bookworm
- Runs after successful Publish Release workflow
- Catches glibc compatibility issues like #326

This ensures that manylinux wheel tags are compatible with common
Docker base images used in production environments.

--- a/.github/workflows/ci-docker.yaml
+++ b/.github/workflows/ci-docker.yaml
@@ -146,3 +146,110 @@ jobs:
         if: success()
         shell: bash
         run: scripts/ci/docker/summary.sh "${{ matrix.variant }}" /tmp/kreuzberg-docker-test-results.json
+
+  # Test PyPI wheel installation on various Linux distributions
+  # This catches glibc compatibility issues like #326
+  test-pypi-wheel:
+    name: Test PyPI Wheel (${{ matrix.os }}, ${{ matrix.image }})
+    if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' }}
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
+    permissions:
+      contents: read
+
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          # x86_64 tests
+          - os: ubuntu-latest
+            image: python:3.10-slim-bookworm
+            platform: linux/amd64
+            arch: x86_64
+          - os: ubuntu-latest
+            image: python:3.12-slim-bookworm
+            platform: linux/amd64
+            arch: x86_64
+          - os: ubuntu-latest
+            image: python:3.13-slim-bookworm
+            platform: linux/amd64
+            arch: x86_64
+          # ARM64 tests (catches glibc compatibility issues like #326)
+          - os: ubuntu-24.04-arm
+            image: python:3.10-slim-bookworm
+            platform: linux/arm64
+            arch: aarch64
+          - os: ubuntu-24.04-arm
+            image: python:3.12-slim-bookworm
+            platform: linux/arm64
+            arch: aarch64
+          - os: ubuntu-24.04-arm
+            image: python:3.13-slim-bookworm
+            platform: linux/arm64
+            arch: aarch64
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Test PyPI wheel installation
+        shell: bash
+        run: |
+          echo "=== Testing kreuzberg PyPI wheel on ${{ matrix.image }} (${{ matrix.arch }}) ==="
+
+          # Create test script
+          cat > /tmp/test_wheel.py << 'PYTEST'
+          import sys
+          print(f"Python version: {sys.version}")
+
+          try:
+              import kreuzberg
+              print(f"kreuzberg version: {kreuzberg.__version__}")
+
+              # Basic functionality test
+              from kreuzberg import ExtractionConfig
+              config = ExtractionConfig()
+              print(f"ExtractionConfig created successfully")
+
+              print("✅ All tests passed!")
+              sys.exit(0)
+          except Exception as e:
+              print(f"❌ Test failed: {e}")
+              sys.exit(1)
+          PYTEST
+
+          # Run the test in Docker container
+          docker run --rm \
+            --platform ${{ matrix.platform }} \
+            -v /tmp/test_wheel.py:/test_wheel.py:ro \
+            ${{ matrix.image }} \
+            bash -c "
+              set -e
+              echo '>>> Installing kreuzberg from PyPI...'
+              pip install --no-cache-dir kreuzberg
+              echo '>>> Running tests...'
+              python /test_wheel.py
+            "
+
+      - name: Test wheel platform tags
+        shell: bash
+        run: |
+          echo "=== Checking wheel platform compatibility ==="
+
+          docker run --rm \
+            --platform ${{ matrix.platform }} \
+            ${{ matrix.image }} \
+            bash -c "
+              set -e
+              echo '>>> System info:'
+              uname -m
+              cat /etc/os-release | grep -E '^(NAME|VERSION)='
+              ldd --version 2>&1 | head -1 || true
+
+              echo ''
+              echo '>>> Available kreuzberg wheels:'
+              pip index versions kreuzberg 2>/dev/null || pip install kreuzberg --dry-run -v 2>&1 | grep -E 'kreuzberg.*\.whl' | head -5 || true
+            "
