perf: reduce allocations via AHashMap, Cow returns, and clone elimination
- Replace HashMap/HashSet with AHashMap/AHashSet across core and binding crates
- Use Cow<'_, str> returns in hot-path text processing to avoid no-op allocations
- Eliminate unnecessary clones: mem::take in loops, lazy config clone in API handler,
  borrow instead of to_vec/to_string in sync extractor
- Replace push_str(&format!(...)) with write! macro to avoid intermediate Strings

--- a/crates/kreuzberg-node/Cargo.toml
+++ b/crates/kreuzberg-node/Cargo.toml
@@ -30,6 +30,7 @@ lazy_static = "1.5"
 num_cpus = "1.17"
 crossbeam-channel = "0.5"
 futures = "0.3"
+ahash = "0.8"
 
 [build-dependencies]
 napi-build = "2.3"
