--- a/crates/kreuzberg-ffi/Cargo.toml
+++ b/crates/kreuzberg-ffi/Cargo.toml
@@ -31,6 +31,7 @@ tokio = { workspace = true }
 html-to-markdown-rs = { version = "2.24.3", default-features = false }
 rayon = { version = "1.11", optional = true }
 log = "0.4"
+ahash = "0.8"
 
 [target.'cfg(all(windows, target_env = "gnu"))'.dependencies]
 kreuzberg = { path = "../kreuzberg", features = [
