--- a/crates/kreuzberg-py/Cargo.toml
+++ b/crates/kreuzberg-py/Cargo.toml
@@ -27,6 +27,7 @@ serde_json = { workspace = true }
 tokio = { workspace = true, features = ["rt", "macros"] }
 tracing = { workspace = true }
 html-to-markdown-rs = { version = "2.24.3", default-features = false }
+ahash = "0.8"
 
 [features]
 default = ["extension-module"]
